--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-C:\Users\Administrator\github\publicMagic\carApp\.idea
-C:\Users\Administrator\github\publicMagic\carApp\carApp.iml
-C:\Users\Administrator\github\publicMagic\publicMagic.iml
-carApp/.idea/vcs.xml
+
+publicMagic/publicMagic.iml
+publicMagic/.idea
+publicMagic/carApp/.idea
+publicMagic/carApp/carApp.iml
+publicMagic/carApp/.idea/vcs.xml
 
 ### Eclipse ###
 .apt_generated
