--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,4 @@ carApp/.idea/modules.xml
 carApp/carApp.iml
 publicMagic.iml
 oop_project_pcShop_MayerSven/oop_project_pcShop_MayerSven.iml
+pc_hardware_database_pcShop/.idea/pc_hardware_database_pcShop.iml
