set product class to abstract

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ publicMagic/.idea
 publicMagic/carApp/.idea
 publicMagic/carApp/carApp.iml
 publicMagic/carApp/.idea/vcs.xml
+publicMagic/pc_hardware_database_pcShop/production
 
 ### Eclipse ###
 .apt_generated
