--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ carApp/carApp.iml
 publicMagic.iml
 oop_project_pcShop_MayerSven/oop_project_pcShop_MayerSven.iml
 pc_hardware_database_pcShop/.idea/pc_hardware_database_pcShop.iml
+carApp/.idea/carApp.iml
